WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
224779
Preconnect tasks and preflight checks do not correctly mark app-bound context string
https://bugs.webkit.org/show_bug.cgi?id=224779
Summary
Preconnect tasks and preflight checks do not correctly mark app-bound context...
Kate Cheney
Reported
2021-04-19 12:28:43 PDT
Preconnect tasks and preflight checks do not correctly mark app-bound context string in resource requests.
Attachments
Patch
(18.28 KB, patch)
2021-04-19 12:31 PDT
,
Kate Cheney
no flags
Details
Formatted Diff
Diff
Patch
(19.03 KB, patch)
2021-04-19 17:55 PDT
,
Kate Cheney
no flags
Details
Formatted Diff
Diff
Patch
(1.72 KB, patch)
2021-04-20 16:30 PDT
,
Kate Cheney
no flags
Details
Formatted Diff
Diff
Patch for landing
(1.70 KB, patch)
2021-04-21 09:10 PDT
,
Kate Cheney
no flags
Details
Formatted Diff
Diff
Show Obsolete
(3)
View All
Add attachment
proposed patch, testcase, etc.
Kate Cheney
Comment 1
2021-04-19 12:31:58 PDT
Created
attachment 426461
[details]
Patch
Kate Cheney
Comment 2
2021-04-19 12:32:39 PDT
<
rdar://problem/76738879
>
Kate Cheney
Comment 3
2021-04-19 17:55:08 PDT
Created
attachment 426502
[details]
Patch
Brent Fulgham
Comment 4
2021-04-20 15:40:52 PDT
Comment on
attachment 426502
[details]
Patch r=me
EWS
Comment 5
2021-04-20 16:11:48 PDT
Committed
r276326
(
236806@main
): <
https://commits.webkit.org/236806@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 426502
[details]
.
Chris Dumez
Comment 6
2021-04-20 16:16:02 PDT
Comment on
attachment 426502
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=426502&action=review
> Source/WebKit/WebProcess/Network/WebLoaderStrategy.cpp:770 > + if (!document)
This does not make sense. You already null-checked document above.
Kate Cheney
Comment 7
2021-04-20 16:30:53 PDT
Reopening to attach new patch.
Kate Cheney
Comment 8
2021-04-20 16:30:54 PDT
Created
attachment 426613
[details]
Patch
EWS
Comment 9
2021-04-21 08:27:55 PDT
/Volumes/Data/worker/Commit-Queue/build/Source/WebKit/ChangeLog neither lists a valid reviewer nor contains the string "Unreviewed" or "Rubber stamp" (case insensitive).
Chris Dumez
Comment 10
2021-04-21 08:28:46 PDT
Comment on
attachment 426613
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=426613&action=review
> Source/WebKit/ChangeLog:7 > + Remove unnecessary document check.
This comment is missing the "Reviewed By" line or "Unreviewed".
Kate Cheney
Comment 11
2021-04-21 09:10:41 PDT
Created
attachment 426696
[details]
Patch for landing
Kate Cheney
Comment 12
2021-04-21 09:11:17 PDT
(In reply to Chris Dumez from
comment #10
)
> Comment on
attachment 426613
[details]
> Patch > > View in context: >
https://bugs.webkit.org/attachment.cgi?id=426613&action=review
> > > Source/WebKit/ChangeLog:7 > > + Remove unnecessary document check. > > This comment is missing the "Reviewed By" line or "Unreviewed".
fixed! Thanks for pointing that out.
EWS
Comment 13
2021-04-21 09:37:18 PDT
Committed
r276369
(
236847@main
): <
https://commits.webkit.org/236847@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 426696
[details]
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug