Preconnect tasks and preflight checks do not correctly mark app-bound context string https://bugs.webkit.org/show_bug.cgi?id=224779 <rdar://problem/76738879>

Reviewed by Brent Fulgham.

Source/WebCore:

Tests: http/tests/in-app-browser-privacy/context-string-preconnect.html
       http/tests/in-app-browser-privacy/context-string-preflight.html

* loader/CrossOriginAccessControl.cpp:
(WebCore::createAccessControlPreflightRequest):
CORS preflight case.

Source/WebKit:

We are using request.firstPartyForCookies() to set the app-bound request
context as of https://bugs.webkit.org/show_bug.cgi?id=224311. Some
cases like preconnect tasks and CORS preflight requests don't set this
value because it is not needed for cookie purposes. Since we are now
using it for app-bound requests, and the context is needed for all
network connections, even those that don't send bytes, we should set
the firstPartyForCookies for these cases.

* NetworkProcess/NetworkProcess.cpp:
(WebKit::NetworkProcess::preconnectTo):
This is the code path for preconnecting to the main resource load, so
we can use the given URL as the first party.

* WebProcess/Network/WebLoaderStrategy.cpp:
(WebKit::WebLoaderStrategy::preconnectTo):
This is the code path for sub resources. We should use the document
firstPartyForCookies value.

Tools:

We should clear data between tests to avoid flakiness or failures.

* WebKitTestRunner/TestController.cpp:
(WTR::TestController::resetStateToConsistentValues):
(WTR::TestController::clearAppBoundNavigationData):
* WebKitTestRunner/TestController.h:
* WebKitTestRunner/cocoa/TestControllerCocoa.mm:
(WTR::TestController::clearAppBoundNavigationData):

LayoutTests:

Layout test coverage.

* http/tests/in-app-browser-privacy/context-string-for-subframe.html:
Drive by fix to create the subframe with JS so we can add a dummy
parameter to avoid caching and causing flakiness. Found this while
testing for flakiness in new tests.

* http/tests/in-app-browser-privacy/context-string-preconnect-expected.txt: Added.
* http/tests/in-app-browser-privacy/context-string-preconnect.html: Added.
* http/tests/in-app-browser-privacy/context-string-preflight-expected.txt: Added.
* http/tests/in-app-browser-privacy/context-string-preflight.html: Added.
Test an unsuccessful preflight request so a real request doesn't
override the stored context data for testing purposes.


Canonical link: https://commits.webkit.org/236806@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@276326 268f45cc-cd09-0410-ab3c-d52691b4dbfc