Source/WebKit/WebProcess/Network/WebLoaderStrategy.cpp
@@ -768,8 +768,12 @@ void WebLoaderStrategy::preconnectTo(FrameLoader& frameLoader, const URL& url, S
 void WebLoaderStrategy::preconnectTo(WebCore::ResourceRequest&& request, WebPage& webPage, WebFrame& webFrame, WebCore::StoredCredentialsPolicy storedCredentialsPolicy, PreconnectCompletionHandler&& completionHandler)
 {
     if (auto* document = webPage.mainFrame()->document()) {
-        if (document && document->loader())
-            request.setIsAppBound(document->loader()->lastNavigationWasAppBound());
+        if (!document)
+            return;
+
+        request.setFirstPartyForCookies(document->firstPartyForCookies());
+        if (auto* loader = document->loader())
+            request.setIsAppBound(loader->lastNavigationWasAppBound());
     }
 
     Optional<uint64_t> preconnectionIdentifier;
